5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1745_1525.log
== TEST (2019-05-15 14:10:39) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

cont = 0
e = 0
t = 0
while(b > r):
	e = e + 
-- ERROR:
File "XXXX", line 9
    e = e + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:12) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

cont = 0
e = 0
t = 0
while(b < 1000):
	e = e + vi * r
	t = e / 60
	cont = cont + 1
print(t)
-- ERROR:
File "XXXX", line 9
    e = e + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:18:57) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

cont = 0
e = 0
t = 0
while(b < 1000):
	e = e + (vi * r)
	t = e / 60
	cont = cont + 1
print(t)
-- ERROR:
File "XXXX", line 9
    e = e + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:19:13) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

cont = 0
e = 0
t = 0
while(b < 1000):
	e = e + (vi * r)
	t = e / 60
	cont = cont + 1
	print(t)
-- OUTPUT:
1000.0
2000.0
3000.0
4000.0
5000.0
6000.0
7000.0
8000.0
9000.0
10000.0
11000.0
12000.0
13000.0
14000.0
15000.0
16000.0
17000.0
18000.0
19000.0
20000.0
21000.0
22000.0
23000.0
24000.0
25000.0
26000.0
27000.0
28000.0
29000.0
30000.0
31000.0
32000.0
33000.0
34000.0
35000.0
36000.0
37000.0
38000.0
39000.0
40000.0
41000.0
42000.0
43000.0
44000.0
45000.0
46000.0
47000.0
48000.0
49000.0
50000.0
51000.0
52000.0
53000.0
54000.0
55000.0
56000.0
57000.0
58000.0
59000.0
60000.0
61000.0
62000.0
63000.0
64000.0
65000.0
66000.0
67000.0
68000.0
69000.0
70000.0
71000.0
72000.0
73000.0
74000.0
75000.0
76000.0
77000.0
78000.0
79000.0
80000.0
81000.0
82000.0
83000.0
84000.0
85000.0
86000.0
87000.0
88000.0
89000.0
90000.0
91000.0
92000.0
93000.0
94000.0
95000.0
96000.0
97000.0
98000.0
99000.0
100000.0
101000.0
102000.0
103000.0
104000.0
105000.0
106000.0
107000.0
108000.0
109000.0
110000.0
111000.0
112000.0
113000.0
114000.0
115000.0
116000.0
117000.0
118000.0
119000.0
120000.0
121000.0
122000.0
123000.0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:26) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va + vi * r

	e = e + 1
	t = t + 2

print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:27:44) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va + vi * r

	e = e + 1
	t = t + 2

print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:28:44) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r) / 60

	e = e + 1
	t = t + 2

print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:15) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:29:30) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

	print(t)
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:46:03) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

	print(t)
-- EXECUTION TIME:
917.385
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:46:03) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

	print(t)
-- EXECUTION TIME:
917.381
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:46:04) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

	print(t)
-- EXECUTION TIME:
917.395
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:46:04) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

	print(t)
-- EXECUTION TIME:
917.309
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:46:04) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

	print(t)
-- EXECUTION TIME:
917.362
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 14:46:04) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

	print(t)
-- EXECUTION TIME:
918.196
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:

-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:58) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 2

print(t)
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:24) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
101
103
105
107
109
111
113
115
117
119
121
123
125
127
129
131
133
135
137
139
141
143
145
147
149
151
153
155
157
159
161
163
165
167
169
171
173
175
177
179
181
183
185
187
189
191
193
195
197
199
201
203
205
207
209
211
213
215
217
219
221
223
225
227
229
231
233
235
237
239
241
243
245
247
249
251
253
255
257
259
261
263
265
267
269
271
273
275
277
279
281
283
285
287
289
291
293
295
297
299
301
303
305
307
309
311
313
315
317
319
321
323
325
327
329
331
333
335
337
339
341
343
345
347
349
351
353
355
357
359
361
363
365
367
369
371
373
375
377
379
381
383
385
387
389
391
393
395
397
399
401
403
405
407
409
411
413
415
417
419
421
423
425
427
429
431
433
435
437
439
441
443
445
447
449
451
453
455
457
459
461
463
465
467
469
471
473
475
477
479
481
483
485
487
489
491
493
495
497
499
501
503
505
507
509
511
513
515
517
519
521
523
525
527
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:56:38) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va * (vi + r)

	e = e + 1
	t = t + 1

	print(t)
-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:57:33) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va + (vi * r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:04) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va + (vi / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:58:11) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va + (vi / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
242
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:06) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

va = 0
e = 0
t = 1

while(va < 1000):
	va = va + ((vi +b) / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
201
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:47) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v < 1000):
	v = v + ((vi * b) / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:10) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v < 1000):
	v = v * ((vi + b) / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:31) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v < 1000):
	v = v + vi * ((vi + b) / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:03:49) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = vi
e = 0
t = 1

while(v > 1000):
	v = v + vi * ((vi + b) / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:03:59) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = vi
e = 0
t = 1

while(v > 1000):
	v = v + vi * ((vi + b) / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:05:18) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = vi
e = 0
t = 1

while(v < 1000):
	v = ((vi + b) / r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:07:49) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = vi
e = 0
t = 1

while(v > 1000):
	v = v + ((vi * b)/r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:20) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v > 1000):
	v = v + ((vi * b)/r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:36) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v > 1000):
	v = v + ((vi + b)/r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:21) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v > 1000):
	v = v + (b*r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:10:41) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v < 1000):
	v = v + (b*r)

	e = e + 1
	t = t + 1

print(t)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:32) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v < 1000):
	v = v + (vi*r)

	e = e + 1
	t = t + 2

print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:52) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v < 1000):
	v = v + (vi*r)

	e = e + 1
	t = t + 2

print(t)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:32) 
-- CODE:
vi = int(input("Valor incial: "))
b = int(input("Bombeada: "))
r = int(input("Retirada: "))

v = 0
e = 0
t = 1

while(v > 1000):
	v = v + (vi + b) / r

	e = e + 1
	t = t + 2

print(t)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
